--- a/Front_end/src/components/Home/Home.css
+++ b/Front_end/src/components/Home/Home.css
@@ -1,8 +1,109 @@
-.intro_img {
+/* .intro_img {
     background-image: url('https://i.pinimg.com/originals/4b/93/28/4b93286dca71bbf97bc24ab523755366.jpg');
     width: 100%;
     height: 90vh;
     background-size: cover;
-    background-repeat: no-repeat;
+    
   
+} */
+
+/* .homeback {
+    
+	width: 100%;
+	height: 81vh;
+	background-image: url('../../img/homee.png');
+	background-size: cover;
+    background-repeat: no-repeat; 
+}
+
+.homeback h1 {
+	color: darkgreen;
+	text-align: center;
+	padding-top: 10%;
+	padding-left: 30%;
+	font-family: cursive;
+	font-size: 25px;
+}
+
+.homeback p {
+	color: darkred;
+	text-align: center;
+	padding-left: 35%;
+	font-family: cursive;
+}
+
+.btn {
+	background-color: rgb(34, 120, 34);
+	outline: none;
+	border: none;
+	color: #efefef;
+	padding: 9px 18px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 20px;
+	margin-left: 65%;
+	margin-top: 2%;
+	cursor: pointer;
+	border-radius: 15px;
+	box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);
+
+}
+
+.btn:hover {
+	background-color: darkgreen;
+} */
+
+.homeback {
+    display: flex; /* Use flexbox */
+    align-items: center; /* Center items vertically */
+    height: 81vh;
+    background-image: url('../../img/homee.png');
+    background-size: cover;
+}
+
+.home_img {
+    width: 40%; /* Adjust image width */
+    margin-right: 20px; /* Adjust margin between image and text */
+    float: left; /* Float the image to the left */
+}
+
+.homeback h1, .homeback p, .btn {
+    width: 50%; /* Set width of text and button column */
+}
+
+.homeback h1 {
+    color: darkgreen;
+    font-family: cursive;
+    font-size: 25px;
+}
+
+.homeback p {
+    color: darkred;
+    font-family: cursive;
+}
+
+/*---Buy Now button of sale/offer product ---*/
+.btn {
+    background-color: rgb(34, 120, 34);
+    outline: none;
+    border: none;
+    color: #efefef;
+    padding: 9px 18px;
+    text-align: center;
+    text-decoration: none;
+    display: block; /* Ensure button takes full width */
+    font-size: 20px;
+    cursor: pointer;
+    border-radius: 15px;
+    box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);
+}
+
+.btn:hover {
+    background-color: darkgreen;
+}
+
+.rohit{
+    display: flex;
+    flex-direction: column;
 }
