--- a/Front_end/src/components/Login/Login.css
+++ b/Front_end/src/components/Login/Login.css
@@ -9,10 +9,10 @@ body {
 /* Container styles */
 .login-container {
   max-width: 400px;
-  margin: auto;
+  /* margin: auto; */
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
   background-color: #f1f1f1; /* Light gray background */
 }
 
@@ -49,12 +49,21 @@ label {
   width: 90%;
 }
 
-.icon {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 10px;
-  color: #777; /* Adjust icon color */
+
+/* Forgot password link styles */
+.forgot-password {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.forgot-password a {
+  color: #8c3121;
+  text-decoration: none;
+}
+
+.forgot-password a:hover {
+  text-decoration: underline;
+  color: #e88a73;
 }
 
 /* Button styles */
@@ -63,29 +72,10 @@ label {
   justify-content: space-between;
 }
 
-.btn {
-  padding: 10px 20px;
-  background-color: #4CAF50; /* Green color */
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
+.main-log{
 
-.btn:hover {
-  background-color: #45a049; /* Darker green color on hover */
-}
-
-/* Back button styles */
-.back-button {
-  padding: 0.5rem 1rem;
-  margin: 2rem;
-  border: none;
-  border-radius: 10px;
-  font-size: 1.2rem;
-  background-color: rgb(11, 116, 120);
-  color: #fff;
-  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+ 
 }
