--- a/Front_end/src/components/Navbar/Navbar.css
+++ b/Front_end/src/components/Navbar/Navbar.css
@@ -5,11 +5,16 @@ body{
 }
 nav {
     background-color: #333;
-    padding: 2rem;
+    padding: 0rem 2rem;
     margin: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
+  }
+
+  .logo {
+    width: 120px;
+	  height: auto;
   }
   
   ul {
