--- a/Front_end/src/components/Register/Register.css
+++ b/Front_end/src/components/Register/Register.css
@@ -3,16 +3,16 @@
 /* Body styles */
 body {
   font-family: Arial, sans-serif;
-  background-color: #f9f9f9;
+ 
 }
 
 /* Container styles */
 .registration-container {
   max-width: 400px;
-  margin: auto;
-  padding: 20px;
+  /* margin: auto; */
+  padding: 2rem;
   border-radius: 10px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
   background-color: #f1f1f1; /* Light gray background */
 }
 
@@ -21,6 +21,7 @@ h2 {
   text-align: center;
   color: #333;
   margin-bottom: 20px;
+  text-decoration: underline;
 }
 
 /* Form styles */
@@ -33,64 +34,88 @@ h2 {
 label {
   margin-bottom: 5px;
   color: #666;
+  display: flex;
+  align-items: center; /* Align label text and icon horizontally */
 }
 
-/* Input styles */
-input {
-  margin-bottom: 10px;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  font-size: 16px;
-  width: 90%;
-  border-radius: 10px;
-}
-input::placeholder{
-  color: black;
-  padding-left: 2rem;
-  
-}
-/* Button styles */
+/* Button container styles */
 .button-container {
   display: flex;
   justify-content: space-between;
 }
 
-.btn {
-  padding: 10px 20px;
-  background-color: #4CAF50; /* Green color */
+/* Button styles */
+.signUp-btn {
+  padding: 10px 60px;
+  background: #333; /* Green color */
   color: #fff;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
   font-size: 16px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: all 0.3s ease;
+  margin-top: 1rem;
 }
 
-.btn:hover {
-  background-color: #45a049; /* Darker green color on hover */
+.signUp-btn:hover {
+  background-color: #534d4d; /* Darker green color on hover */
 }
 
 /* Back button styles */
-.back{
+.back {
   padding: 0.5rem 1rem;
-
   margin: 2rem;
   border: none;
   border-radius: 10px;
   font-size: 1.2rem;
-  background-color: rgb(11, 116, 120);
+  background-color: #333;
   color: #fff;
   cursor: pointer;
 }
-.input_container{
-  position: relative;
+
+.back:hover {
+  background-color: #534d4d;
+}
+
+.login-btn{
+  padding: 10px 60px;
+  background: #aca9a9; /* Green color */
+  color: #333;
+  border: none;
+  border-radius: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin-top: 1rem;
 
 }
-.icon{
+.login-btn:hover{
+ 
+  background: #565555; /* Green color */
+ 
+}
 
-  position: absolute;
-  margin-top: 10px;
-  margin-left: 10px;
+input{
+  margin-top:0.4rem ;
   
 }
+
+.button-container{
+  margin-top: 1.2rem;
+  margin-bottom: 1.2rem;
+  display: flex;
+  gap: 1rem;
+}
+
+.main-reg{
+  display:flex ;
+  justify-content: center;
+  gap: 1rem;
+}
+
+/* .reg_img{
+  width: 50%;
+
+ 
+} */
+
