--- a/Front_end/src/components/Home/Home.css
+++ b/Front_end/src/components/Home/Home.css
@@ -54,36 +54,49 @@
 	background-color: darkgreen;
 } */
 
+
 .homeback {
-    display: flex; /* Use flexbox */
-    align-items: center; /* Center items vertically */
-    height: 81vh;
-    background-image: url('../../img/homee.png');
-    background-size: cover;
+    display: flex;
+    align-items: center;
+    height: 80vh;
 }
 
 .home_img {
-    width: 40%; /* Adjust image width */
-    margin-right: 20px; /* Adjust margin between image and text */
-    float: left; /* Float the image to the left */
+    width: 35%;
+    margin-left: 8rem;
 }
 
-.homeback h1, .homeback p, .btn {
-    width: 50%; /* Set width of text and button column */
+.message {
+    flex: 1; /* Let the message content take remaining space */
+    padding: 0;
+    margin-left: 10rem;
+    margin-top: 3.1rem;
+    background-image: url('../../img/back.png'); /* Replace 'path/to/your/image.jpg' with the actual path to your image */
+    background-size: cover; /* Cover the entire container with the background image */
+    background-position: center;
+    width : 100%;
+    height: 87vh;
+
 }
 
 .homeback h1 {
     color: darkgreen;
     font-family: cursive;
     font-size: 25px;
+    align-items: center;
+    margin-top: 15rem;
+    margin-left: 10rem;
+    
 }
 
 .homeback p {
     color: darkred;
     font-family: cursive;
+    margin-top: 2rem; /* Add margin for better spacing */
+    margin-left: 10rem;
+    align-items: center;
 }
 
-/*---Buy Now button of sale/offer product ---*/
 .btn {
     background-color: rgb(34, 120, 34);
     outline: none;
@@ -92,18 +105,15 @@
     padding: 9px 18px;
     text-align: center;
     text-decoration: none;
-    display: block; /* Ensure button takes full width */
+    display: inline-block; /* Ensure button takes only necessary space */
     font-size: 20px;
     cursor: pointer;
     border-radius: 15px;
     box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);
+    margin-top: 1rem; /* Add margin for better spacing */
+    margin-left: 20rem;
 }
 
 .btn:hover {
     background-color: darkgreen;
-}
-
-.rohit{
-    display: flex;
-    flex-direction: column;
 }
